# devops-string

./: pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/stringstandardization/: stringstd.py
test/: test_stringstd.py
