[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devopsstringprocess"
version = "0.0.2"
authors = [
  { name="Ramon Durães", email="ramongduraes@gmail.com" },
]
description = "String standardization package for devops course"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/ramongduraes/devops-string"
"Bug Tracker" = "https://github.com/ramongduraes/devops-string/issues"